--- a/src/app/pingers/new-website/new-website.component.html
+++ b/src/app/pingers/new-website/new-website.component.html
@@ -1,20 +1,20 @@
 <div class='newWebsite__block'>
-  <p class='title title--size-m'>Adding new website</p>
-  <p class='regularText regularText--size-l regularText__success' *ngIf="formState === 2">New website successfully added!</p>
+  <p class='title title--size-m'>Adding new page</p>
+  <p class='regularText regularText--size-l regularText__success' *ngIf="formState === 2">New page successfully added!</p>
   <app-form *ngIf="formState !== 2" [form]='newWebsiteForm' [fields]='fields' [globalErrors]='globalErrors' [errorMessages]='errorMessages'
     #newWebsiteFormComponent>
     <form class='newWebsiteForm' [formGroup]="newWebsiteForm" novalidate (ngSubmit)='submit()'>
       <div class='inputBlock'>
-        <label class='inputLabel' for='websiteName'>Website name:</label>
-        <input type='text' id='websiteName' name='websiteName' class='input' formControlName='websiteName' maxlength='255'
-          [class.input--errored]='newWebsiteForm.controls.websiteName.invalid && newWebsiteForm.controls.websiteName.dirty && !!errorMessages.websiteName'>
-        <span *ngIf="newWebsiteForm.controls.websiteName.invalid && newWebsiteForm.controls.websiteName.dirty && !!errorMessages.websiteName"
+        <label class='inputLabel' for='pageName'>Page name:</label>
+        <input type='text' id='pageName' name='pageName' class='input' formControlName='pageName' maxlength='255'
+          [class.input--errored]='newWebsiteForm.controls.pageName.invalid && newWebsiteForm.controls.pageName.dirty && !!errorMessages.pageName'>
+        <span *ngIf="newWebsiteForm.controls.pageName.invalid && newWebsiteForm.controls.pageName.dirty && !!errorMessages.pageName"
           class='input__error'>
-          {{errorMessages.websiteName}}
+          {{errorMessages.pageName}}
         </span>
       </div>
       <div class='inputBlock'>
-        <label class='inputLabel' for='pingerUrl'>Website url:</label>
+        <label class='inputLabel' for='pingerUrl'>Page url:</label>
         <input type='text' id='pingerUrl' name='pingerUrl' class='input' formControlName='pingerUrl' maxlength='255'
           [class.input--errored]='newWebsiteForm.controls.pingerUrl.invalid && newWebsiteForm.controls.pingerUrl.dirty && !!errorMessages.pingerUrl'>
         <span *ngIf="newWebsiteForm.controls.pingerUrl.invalid && newWebsiteForm.controls.pingerUrl.dirty && !!errorMessages.pingerUrl"
@@ -22,7 +22,7 @@
           {{errorMessages.pingerUrl}}
         </span>
       </div>
-      <button class='btn btn__submit' type='submit' [disabled]='formState === 1'>Add website</button>
+      <button class='btn btn__submit' type='submit' [disabled]='formState === 1'>Add page</button>
       <span *ngIf="formState === 3" class='input__error'>
           There is conection error. Please try again a bit later.
       </span>
