--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -47,6 +47,10 @@ body {
   &--size-s {
     font-size: 20px;
   }
+
+  &--size-xs {
+    font-size: 16px;
+  }
 }
 
 .regularText {
@@ -71,7 +75,7 @@ button.btn {
   border: 1px solid $borderNormal;
   padding: 8px 16px;
   font-size: 24px;
-  border-radius: 5px;
+  // border-radius: 5px;
   cursor: pointer;
   outline: none;
   font-weight: 500;
@@ -162,14 +166,14 @@ table.table {
       margin-left: 4px;
     }
   }
+}
 
-  .actionIcon {
-    color: $borderNormal;
-    font-size: 25px;
-    padding: 5px;
-    cursor: pointer;
-    transition: all .2s ease;
-  }
+.actionIcon {
+  color: $borderNormal;
+  font-size: 25px;
+  padding: 5px;
+  cursor: pointer;
+  transition: all .2s ease;
 }
 
 .modalContainer {
